@@ -1,5 +1,8 @@
 <zcml>
 
   <include package="needed.by.zcml"/>
+  <securityPolicy
+      component="also.needed.by.zcml.ZopeSecurityPolicy"
+      />
 
 </zcml>
